[package]
name = "Rust_DMA"
version = "0.1.0"
edition = "2024"

[profile.dev.build-override]
debug = true

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.11.0"
easy-upnp = "0.3.0"
memprocfs = "5.16.5"
rmp-serde = "1.3.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tiny_http = "0.12.0"
tokio = { version = "1.48.0", features = ["full"] } #Do I need the full version or can I jsut get the few things I want
webrtc = "0.14.0" #this is massive, can I cut down on this (adds 2 minutes to release compile)

[build-dependencies]
quote = "1.0.44"
syn = "2.0.114"
proc-macro2 = "1.0.106"
reqwest = {version = "0.13.1", features = ["blocking"]}
